fix: text wrap in popover

--- a/quartz/components/styles/popover.scss
+++ b/quartz/components/styles/popover.scss
@@ -34,6 +34,7 @@
     border-radius: 5px;
     box-shadow: 6px 6px 36px 0 rgba(0, 0, 0, 0.25);
     overflow: auto;
+    white-space: normal;
   }
 
   h1 {
